Revert "frontend updated"
This reverts commit 877efbbd1c28bbc4bc60a5f70852de8f54fc76a3.